--- a/polybar/config
+++ b/polybar/config
@@ -19,7 +19,7 @@
 [colors]
 ;background = ${xrdb:color0:#222}
 background = #cc020205
-background-alt = #444
+background-alt = #56ADBC
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #555
@@ -27,8 +27,8 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/example]
-;monitor = ${env:MONITOR:HDMI-1}
+[bar/bar1]
+monitor = ${env:MONITOR:DP-0}
 width = 100%
 height = 30
 ;offset-x = 1%
@@ -80,6 +80,59 @@ cursor-scroll = ns-resize
 
 separator = |
 
+[bar/bar2]
+monitor = ${env:MONITOR:HDMI-0}
+width = 100%
+height = 30
+;offset-x = 1%
+;offset-y = 1%
+;radius = 6.0
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+;line-size = 3
+;line-color = #f00
+
+;border-size = 4
+;border-color = #00000000
+
+padding-left = 0
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 2
+
+font-0 = NotoSansDisplay Nerd Font:pixelsize=12;1
+font-1 = fixed:pixelsize=10;1
+font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-3 = siji:pixelsize=10;1
+
+modules-left = i3
+modules-center = xwindow
+modules-right = filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery date
+
+;tray-position = right
+;tray-padding = 1
+;tray-background = #0063ff
+
+;wm-restack = bspwm
+;wm-restack = i3
+
+;override-redirect = true
+
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
+
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+separator = |
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
@@ -103,14 +156,13 @@ label-layout-underline = ${colors.secondary}
 [module/filesystem]
 type = internal/fs
 interval = 25
-
-format-mounted-prefix = " "
-format-unmounted-prefix = " "
+spacing = 2
 
 mount-0 = /
+mount-1 = /home
 
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
+label-mounted =  %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-unmounted =  %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
@@ -118,7 +170,6 @@ type = internal/bspwm
 
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 label-occupied = %index%
@@ -142,7 +193,7 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
@@ -151,7 +202,6 @@ label-mode-background = ${colors.primary}
 ; focused = Active workspace on focused monitor
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
@@ -239,16 +289,14 @@ label-disconnected = 睊
 
 [module/eth]
 type = internal/network
-interface = enp0s31f6
+interface = enp40s0
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
+format-connected-prefix = " "
 label-connected = %local_ip%
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
+format-disconnected = 
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
