added get_dotfiles script

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -368,7 +368,7 @@ use-damage = true
 # using *--log-file*, since it can generate a huge stream of logs.
 #
 # log-level = "debug"
-log-level = "info";
+log-level = "trace";
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr. 
@@ -376,7 +376,7 @@ log-level = "info";
 # logs might still be written to the stderr. 
 # When setting this option from the config file, it is recommended to use an absolute path.
 #
-log-file = "$HOME/.config/picom/picom.log"
+log-file = "/home/ivan/.config/picom/picom.log"
 
 # Show all X errors (for debugging)
 # show-all-xerrors = false
