--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -20,7 +20,7 @@ env:
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: alacritty
+  TERM: xterm-256color
   WINIT_HIDPI_FACTOR: "1"
   WINIT_X11_SCALE_FACTOR: "1"
   #window:
@@ -324,7 +324,7 @@ font:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
+background_opacity: 0.9
 colors:
   # Default colors
   primary:
