--- a/i3/config
+++ b/i3/config
@@ -20,7 +20,7 @@ font pango:NotoSansDisplay Nerd Font 10
 #font pango:DejaVu Sans Mono 8
 
 # wallpaper
-exec_always --no-startup-id feh --bg-fill ~/Imágenes/mario-dark-wallpaper.jpg
+exec_always --no-startup-id nitrogen --set-zoom-fill --random /home/ivan/wallpapers
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -59,7 +59,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -show run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -67,7 +67,7 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # start passmenu
-bindsym $mod+p exec --no-startup-id passmenu
+bindsym $mod+p exec --no-startup-id rofi-pass
 
 # change focus
 bindsym $mod+j focus left
