--- a/polybar/config
+++ b/polybar/config
@@ -51,7 +51,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = NotoSansDisplay Nerd Font:pixelsize=12;1
+font-0 = NotoSans Nerd Font:pixelsize=12;1
 font-1 = fixed:pixelsize=10;1
 font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-3 = siji:pixelsize=10;1
