--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:NotoSansDisplay Nerd Font 10
+font pango:NotoSans Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -202,8 +202,6 @@ for_window [class=".*"] border pixel 2
 # Gaps
 gaps inner 4
 gaps outer 1
-
-smart_borders on
 
 # Compositor
 exec --no-startup-id picom --experimental-backends -b
